[package]
name = "git-pr"
description = "TODO"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/git-pr"
repository = "https://github.com/adam-gaia/git-pr"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.3"
log = "0.4.22"

[dev-dependencies]
pretty_assertions = "1.4.1"
